--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         >
           <i class="fa fa-spinner fa-spin fa-5x"></i>
         </div>
-        <div class="row py-5 g-4" id="rowData"></div>
+        <div class="row py-5 g-4 ms-5" id="rowData"></div>
       </div>
     </div>
 
